# config-repo

bigdata/hadoop_2.7.3/: core-site.xml  hadoop-env.sh  hadoop插件使用说明  hdfs-site.xml  mapred-env.sh  mapred-site.xml  mapreduce  yarn-site.xml
bigdata/hadoop_3.0.3/: core-site.xml  hadoop-env.sh  hdfs-site.xml  mapred-site.xml
bigdata/hbase_1.2.6/: hbase-env.sh  hbase-site.xml
bigdata/hbase_2.1.1/: hbase-env.sh  hbase-site.xml  notice.txt
bigdata/hive_2.3.1/: hive-env.sh  hive-exec-log4j2.properties  hive-log4j2.properties  hive-site.xml
bigdata/hive_2.3.4/: hive-env.sh  hive-site.xml  notics.txt
development/birt/: sample.rptdesign
development/bootstrap/: bootstrap.html  index.css
development/cpp/: CMakeLists.txt
development/cpp/makefile/: makefile  max.c  max_num.c
development/log/: log4j.properties
development/markdown/: sample.md
development/maven/: settings.xml
development/poi/: poi.xlsx
development/redis/: redis-master-slave.bat  redis-master.conf  redis-sentinel.bat  redis-slave01.conf  redis-slave02.conf  sentinel-01.conf  sentinel-02.conf  sentinel-03.conf
development/sbt/: sbt.boot.properties  sbt.repositories
development/scala/: idea.txt  sbt.boot.properties  sbt.repositories  sbtconfig.txt
development/wildfly/: standalone.xml
elk/: dynamic_template.txt  filebeat.yml  kafka-elasticsearch-pipleline.conf  logstash-sample.conf  metadata-pipleline.conf  output-kafka-pipleline.conf
linux/: sources.list
linux/docker/: Dockerfile  start_docker.sh  start_web.sh
linux/http/: httpd-vhosts.conf  httpd.conf  mod_jk.conf  nginx.conf
(+17 files in other folders)
